--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: api-container
-        image: valerietxh/api:latest
+        image: valerietxh/api-aks:latest
         ports:
         - containerPort: 80
         env:
