--- a/ui-deployment.yaml
+++ b/ui-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         - containerPort: 80
         env:
         - name: API_URL
-          value: "http://${{ secrets.API_URL }}:80"
+          value: "/"
 ---
 apiVersion: v1
 kind: Service
